# Tetris

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  game_Tetris  main.cpp
include/: FieldBase.hpp  FieldPredictor.h  FigureFactory.hpp  RandomFigureFactory.h  X11.h  X11.hpp  drawable.h  field.h  figureBase.h  figure_J.h  figure_L.h  figure_T.h  fonts.h  forDrawing.h  global.h  iFigureFactory.h  iKeyInstructor.h  iPassFigure.h
src/: FieldPredictor.cpp  RandomFigureFactory.cpp  X11.cpp  field.cpp  figureBase.cpp  figure_J.cpp  figure_L.cpp  figure_T.cpp  fonts.cpp
